add base contents

--- a/about.html
+++ b/about.html
@@ -6,28 +6,38 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Alkahfi - About</title>
 	<link rel="stylesheet" href="all.css">
+	<link rel="icon" type="image/x-icon" href="assets/favicon-straw.ico">
 </head>
 
 <body>
 	<nav class="_mb-3">
 		<a href="/">Home</a>
 		<br>
-		<span>-------------</span>
 	</nav>
 	<div class="container">
+		<hr style="border-style: dashed;">
 		<header>
 			<h1 class="_none">About Me</h1>
 		</header>
 		<main>
-			<h2>Indonesian</h2>
-			<p>I was born in Balikpapan, Borneo Island.</p>
-			<p>Now, I am living in Java Island, more precisely in Banten (left corner of the island).</p>
-			<figure>
-				<img class="_cover" width="375" height="375" src="assets/ethical-hacker-wannabe.jpg"
-					alt="an idealist men who learns to be more realistic">
-			</figure>
-			<p>My mother tongue is Bahasa Indonesia, and the foreign language that I understand at the very moment is English.</p>
-			<p>My full name is Muhammad Alkahfi Khuzaimy Abdullah bin Abdullah Lahji.<br />bin Abdullah refers to Son of Abdullah and Lahji is family name from Arabian Culture.</p>
+			<article>
+				<h2>Indonesian</h2>
+				<p>Being a nomad isn't easy, but it's what life has given me. I spent most of my childhood in Balikpapan, Borneo island. It was a lively place with beautiful forests and beaches 🏖️. Now, I live in South Tangerang, on the western side of the island of Java. Life here is more urban and fast-paced. Moving around has been challenging, but each place has given me unique memories and experiences.</p>
+				<figure>
+					<img class="_cover" width="375" height="375" src="assets/ethical-hacker-wannabe.jpg"
+						alt="an idealist men who learns to be more realistic">
+				</figure>
+				<p>My full name is Muhammad Alkahfi Khuzaimy Abdullah bin Abdullah Lahji.<br />bin Abdullah refers to Son of
+					Abdullah and Lahji is Arabian family name.</p>
+			</article>
+			<article>
+				<h2>Programmer</h2>
+				<figure>
+					<img class="_cover" width="375" height="375" src="assets/inspired-by-kent-mac.jpg" alt="enable laptop on the train trip">
+					<figcaption>Sticker inspired by Kent C. Dodds</figcaption>
+				</figure>
+				<p>I really enjoy playing with laptop; this simple reason led me to believe that computer science is the only suitable study for me. During my studies, I gained a lot of programming fundamentals (yeah, that's what this study is about), but not so much in-depth technical knowledge in my case. Programming is like an ocean; you never know where its end is. Yesterday, I learned about data structures using the C++ language, and then I had an exam where I had to create a desktop application using Java. Honestly, I don't understand their relationship with each other.</p>
+			</article>
 		</main>
 	</div>
 </body>
