--- a/index.html
+++ b/index.html
@@ -10,34 +10,33 @@
 </head>
 
 <body>
-	<h1>I am <span class="js-my-name">Alkahfi</span>, a Human Being.</h1>
+	<h1><span class="js-my-name">Alkahfi</span> (a Human Being) Homepage</h1>
 	<p>Thanks to <a href="https://www.youtube.com/watch?v=EXfFBEuCAr0" target="_blank">@NetworkChuck</a> who has helped me
 		to start.</p>
 	<img class="_cover" width="150" height="150" src="assets/cappuccino.jpeg" alt="a cup of coffee and small plate, feels like in warung kopi indonesia">
 	<p>Sip your coffee...<br /><br />Enjoy!</p>
-	<h2>Stuffs</h2>
+	<h2>Contents</h2>
 	<nav>
 		<ul>
 			<li>
 				<a href="about.html">Who am I</a>
 			</li>
 			<li>
-				<a href="about.html">Past Works</a>
+				<a href="works.html">Works I did in the past</a>
 			</li>
 		</ul>
 	</nav>
 	<h2>Want to Connect?</h2>
-	<p>Text me via <a href="mailto:alkahfikhz@proton.me">Email</a> or <a
+	<p>For any reasons, Send me <a href="mailto:alkahfikhz@proton.me">Email</a> or text me on <a
 			href="https://www.instagram.com/alkahfikhz/">Instagram</a></p>
 	<script>
 		const NICK_CHANGE_INTEVAL = 3500
 		const nickNames = [
 			"Alkahfi",
-			"Al-Kahfi",
 			"Kahfi",
 			"Alfi",
 			"AK",
-			"Alcoffeeocha",
+			"Alcoffeeocha"
 		]
 		const myName = document.querySelector(".js-my-name")
 		
