add opengraph to home

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Alkahfi</title>
+	<title>Muhammad Alkahfi</title>
 	<link rel="stylesheet" href="all.css">
 	<link rel="icon" type="image/x-icon" href="assets/favicon-straw.ico">
+	<meta name="description" content="About a human being called Alkahfi">
+	<meta property="og:title" content="Muhammad Alkahfi" />
+	<meta property="og:description" content="About a human being called Alkahfi" />
+	<meta property="og:type" content="profile" />
+	<meta property="og:url" content="https://kahfi.dev" />
+	<meta property="og:image" content="https://kahfi.dev/assets/ethical-hacker-wannabe.jpg" />
 </head>
 
 <body>
-	<h1><span class="js-my-name">Alkahfi</span> (a Human Being) Homepage</h1>
+	<h1>I am <span class="js-my-name">Alkahfi</span>. Welcome to My Homepage.</h1>
 	<p>Thanks to <a href="https://www.youtube.com/watch?v=EXfFBEuCAr0" target="_blank">@NetworkChuck</a> who has helped me
 		to start.</p>
 	<img class="_cover" width="150" height="150" src="assets/cappuccino.jpeg" alt="a cup of coffee and small plate, feels like in warung kopi indonesia">
