--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</li>
 		</ul>
 	</nav>
-	<h2>Want to Connect?</h2>
+	<h2>Want to Discuss?</h2>
 	<p>For any reasons, Send me <a href="mailto:alkahfikhz@proton.me">Email</a> or text me on <a
 			href="https://www.instagram.com/alkahfikhz/">Instagram</a></p>
 	<script>
