--- a/works.html
+++ b/works.html
@@ -7,6 +7,7 @@
 	<title>Alkahfi - About</title>
 	<link rel="stylesheet" href="all.css">
 	<link rel="icon" type="image/x-icon" href="assets/favicon-straw.ico">
+	<meta name="robots" content="noindex,nofollow">
 </head>
 
 <body>
@@ -17,13 +18,13 @@
 	<div class="container">
 		<hr style="border-style: dashed;">
 		<header>
-			<h1 class="_none">past work</h1>
+			<h1>Works I did in the past</h1>
 		</header>
 		<main>
 			<nav>
 				<ul>
 					<li>
-						<a href="works/an-ecommerce-project.html">Hello Single Page App | an E-Commerce Project</a>
+						<a href="works/an-ecommerce-project.html">First Look at Single Page Application | an E-Commerce Project</a>
 					</li>
 					<li>
 						<a href="works/a-flutter-app-product.html">So, this is Orthogonality | a Flutter App Product</a>
