--- a/works/a-flutter-app-product.html
+++ b/works/a-flutter-app-product.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Alkahfi | Works | a Flutter App Product</title>
-	<link rel="stylesheet" href="/all.css">
+	<link rel="stylesheet" href="/all.css?v=210624">
 	<link rel="icon" type="image/x-icon" href="/assets/favicon-straw.ico">
 	<meta name="robots" content="noindex,nofollow">
 </head>
