adjust about me and change portfolio link

--- a/index.html
+++ b/index.html
@@ -1,58 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Muhammad Alkahfi</title>
+    <link rel="stylesheet" href="all.css?v=210624" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon-straw.ico" />
+    <meta name="description" content="About a human being called Alkahfi" />
+    <meta property="og:title" content="Muhammad Alkahfi" />
+    <meta
+      property="og:description"
+      content="About a human being called Alkahfi"
+    />
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://kahfi.dev" />
+    <meta
+      property="og:image"
+      content="https://kahfi.dev/assets/ethical-hacker-wannabe.jpg"
+    />
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Muhammad Alkahfi</title>
-	<link rel="stylesheet" href="all.css?v=210624">
-	<link rel="icon" type="image/x-icon" href="assets/favicon-straw.ico">
-	<meta name="description" content="About a human being called Alkahfi">
-	<meta property="og:title" content="Muhammad Alkahfi" />
-	<meta property="og:description" content="About a human being called Alkahfi" />
-	<meta property="og:type" content="profile" />
-	<meta property="og:url" content="https://kahfi.dev" />
-	<meta property="og:image" content="https://kahfi.dev/assets/ethical-hacker-wannabe.jpg" />
-</head>
+  <body>
+    <h1>
+      I am <span class="js-my-name">Alkahfi</span>. Welcome to My Homepage.
+    </h1>
+    <p>
+      Thanks to
+      <a href="https://www.youtube.com/watch?v=EXfFBEuCAr0" target="_blank"
+        >@NetworkChuck</a
+      >
+      who has helped me to start.
+    </p>
+    <img
+      class="_cover"
+      width="150"
+      height="150"
+      src="assets/cappuccino.jpeg"
+      alt="a cup of coffee and small plate, feels like in warung kopi indonesia"
+    />
+    <p>Sip your coffee...<br /><br />Enjoy!</p>
+    <h2>Contents</h2>
+    <nav>
+      <ul>
+        <li>
+          <a href="about/index.html">Who am I</a>
+        </li>
+        <li>
+          <a href="works/index.html">Works I did in the past</a>
+        </li>
+      </ul>
+    </nav>
+    <h2>Want to Discuss?</h2>
+    <p>
+      Send me
+      <a href="mailto:alkahfikhz@proton.me">Email</a> or DM me on
+      <a href="https://www.linkedin.com/in/alcoffeeocha/">LinkedIn</a>
+    </p>
+    <script>
+      const NICK_CHANGE_INTEVAL = 3500;
+      const nickNames = ['Alkahfi', 'Kahfi', 'Alfi', 'Kaf'];
+      const myName = document.querySelector('.js-my-name');
 
-<body>
-	<h1>I am <span class="js-my-name">Alkahfi</span>. Welcome to My Homepage.</h1>
-	<p>Thanks to <a href="https://www.youtube.com/watch?v=EXfFBEuCAr0" target="_blank">@NetworkChuck</a> who has helped me
-		to start.</p>
-	<img class="_cover" width="150" height="150" src="assets/cappuccino.jpeg" alt="a cup of coffee and small plate, feels like in warung kopi indonesia">
-	<p>Sip your coffee...<br /><br />Enjoy!</p>
-	<h2>Contents</h2>
-	<nav>
-		<ul>
-			<li>
-				<a href="about.html">Who am I</a>
-			</li>
-			<li>
-				<a href="works.html">Works I did in the past</a>
-			</li>
-		</ul>
-	</nav>
-	<h2>Want to Discuss?</h2>
-	<p>For any reasons, Send me <a href="mailto:alkahfikhz@proton.me">Email</a> or text me on <a
-			href="https://www.instagram.com/alkahfikhz/">Instagram</a></p>
-	<script>
-		const NICK_CHANGE_INTEVAL = 3500
-		const nickNames = [
-			"Alkahfi",
-			"Kahfi",
-			"Alfi",
-			"AK",
-			"Alcoffeeocha"
-		]
-		const myName = document.querySelector(".js-my-name")
-		
-		function pickNickRandomly(){
-			const countNick = nickNames.length
-			const randomIndex = Math.floor(Math.random() * countNick)
-			return randomIndex
-		}
-		myName.textContent = nickNames[pickNickRandomly()]
-	</script>
-</body>
-
+      function pickNickRandomly() {
+        const countNick = nickNames.length;
+        const randomIndex = Math.floor(Math.random() * countNick);
+        return randomIndex;
+      }
+      myName.textContent = nickNames[pickNickRandomly()];
+    </script>
+  </body>
 </html>
