--- a/works/a-flutter-app-product.html
+++ b/works/a-flutter-app-product.html
@@ -60,8 +60,8 @@
 			</article>
 			<article>
 				<h3>Valuable Lessons</h3>
-				<p>Coding requires dedication and patience, to help us with that, be strict with our own priorities, so we can <em>use the time to rest and think about the product</em>. Understands acceptance criteria and the product owner's expectations for the application, then taking the time to describe how it works will help direct the implementation to be on target. Draw the flow if it is hard to imagine.</p>
-				<p>It is also crucial to maintain good and healthy communication with the team, especially fellow developers, in my case the scope of the product was large, because other features that we may not need. I learned that <em>collaboration is better than buy-in</em> (just sell your idea out). Collaboration is also hard soft skill to develop!</p>
+				<p>Coding requires dedication and patience, to help us with that, <em>use the time to rest and think about the product</em>. Understands acceptance criteria and the product owner's expectations for the application, then taking the time to describe how it works will help direct the implementation to be on target. Draw the flow if it is hard to imagine.</p>
+				<p>It is also crucial to maintain good and healthy communication with the team, especially fellow developers, in my case the scope of the product was large, because other features that we may not need. I learned that <em>collaboration is a key</em>.</p>
 			</article>
 		</main>
 </body>
