--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
             Being a nomad isn't easy, but it's what life has given me. I spent
             most of my childhood in Balikpapan, Borneo island. It was a lively
             place with beautiful forests and beaches 🏖️. Now, I live in South
-            Tangerang, on the western side of the island of Java. Life here is
+            Tangerang. Life here is
             more urban and fast-paced. Moving around has been challenging, but
             each place has given me unique memories and experiences.
           </p>
@@ -39,8 +39,9 @@
               alt="an idealist men who learns to be more realistic"
             />
           </figure>
+          <p>You can call me Alkahfi, Kahfi or Alfi.</p>
         <article>
-          <h2>Programmer</h2>
+          <h2>IT Enthusiast</h2>
           <figure>
             <img
               loading="lazy"
@@ -56,23 +57,14 @@
             I really enjoy playing with laptops; this simple reason led me to
             believe that computer science is the only suitable study for me.
             During my studies, I gained a lot of programming fundamentals, but
-            not so much in-depth technical knowledge. I was not paying attention
-            enough, though. Programming is like an ocean I think; you never know
-            how large it is and where its end is.
+            not so much in-depth technical practice. I was not paying attention
+            enough, though. Programming is like an ocean; you never know
+            how large it is and where it ends.
           </p>
           <p>
-            On college, I learned how to sort items using Pascal language, how
-            to create a simple twitter website which has tweets so I understand
-            what JSON is, cloned already existing website using PHP, and
-            implement a Data Warehouse solution with PostgreSQL. Honestly, I did
-            not understand the relationship between each other.
+            On college, I learned programming concepts, languages, database, problem solving, tools, software documents and yeah creating an app.
           </p>
-          <p>
-            You may hear about WordPress, Telegram bots, ChatGPT, and
-            E-Commerce, those digital products are developed by bunch of
-            programmers.
-          </p>
-          <h3>If programming is an ocean 🐋<br />where am I?</h3>
+          <h3>Working as a Programmer</h3>
           <p>
             In terms of work, roles or professions (as a programmer) are usually
             more specific. I have worked as a
@@ -81,42 +73,34 @@
             and interact with, for example, the input box for typing Instagram
             caption. A contrasting role is Backend Developer, which focuses on
             developing server application to support frontend application, such
-            as supplying data from database. Here is another example: if your
+            as supplying or storing data. Here is another example: if your
             friend likes your instagram post, that like and your friend username
-            must be saved in the server so it does not get lost.
+            must be saved so when you open your instagram, your post has friend's like.
           </p>
           <p>
             For the jack-of-all-trades role, many call it a Fullstack Developer
-            or simply a Software Developer. These roles require both of Frontend
+            or a Software Developer. These roles require both of Frontend
             and Backend skills, superb isn't it?
           </p>
           <p>
-            There are three types of software: web, mobile, and desktop based
-            application.<br />Their notable difference lies in where the
-            software is used or installed. As a Frontend Developer, we primarily
+            There are three common types of software: web, mobile, and desktop based
+            application.<br />I guess you have used them before. Their notable difference lies in where the
+            software is installed. As a Frontend Developer, we often
             work on web-based software—applications that run in a web browser
-            (Google Chrome, Safari...). These can be website or web application.
+            (Google Chrome, Firefox...). These can be website or web application.
             My homepage that you are visiting right now is a website, or I like
-            to call it webpage because it contains some pages and no other
+            to call it a webpage because it contains some pages and no other
             functionality. Importantly, this doesn't exclude the possibility of
             creating applications that can run on multiple platforms, especially
             when there isn't a dedicated developer available for a specific
-            platform, usually a mobile developer or an application developer.
+            platform, e.g. mobile developer or application developer.
           </p>
           <p>
             Programmer, Developer, and Engineer are similar <em>roles</em>, the
-            latter requires you to plan and design the software, it is
-            comprehensive.<br />On the other hand; Programming, Development, and
-            Engineering are the <em>process</em> or the main task. These terms
+            latter requires you to plan and design the software, it is comprehensive. <br />On the other hand; Programming, Development, and
+            Engineering are the <em>activity</em>. These terms
             or jargons may not be 100% agreed upon by everyone, but I hope you
-            get the point.
-            <span style="color: #0077be">Remember:</span> Programming is an
-            Ocean and
-            <a
-              href="https://youtu.be/iQnHgIOS_ks?si=pSSpVZIl_hRG2sv_"
-              target="_blank"
-              >Sailing in the Dark Isn't Smart Kid! said Emarosa 🎵</a
-            >
+            get the point. What really matters is their problem solving skill to help human problems with the use of Information Technology.
           </p>
         </article>
       </main>
