--- a/works/an-ecommerce-project.html
+++ b/works/an-ecommerce-project.html
@@ -31,9 +31,8 @@
 					was a big project.</p>
 				<p>After discussing the list of features, our friend, the UI/UX designer, created a mockup or hi-fi design. "It
 					can't be done with simple technology; a PHP web application with CodeIgniter seems difficult to split.
-					Something new is needed." I thought. Although, thinking back now, it could actually work, as many e-commerce
-					sites are monoliths. Suddenly, I remembered Vue, a JavaScript framework that seems suitable for this project.
-					I've heard it can create many small components, which is interesting.</p>
+					Something new is needed." I thought. Although, thinking back now, it could actually work. Suddenly, I remembered Vue, a JavaScript framework that seems suitable for this project.
+					I wanted to try.</p>
 				<p>I did some research on YouTube to find out what the backend should be like if we use Vue. I had heard about
 					Laravel + Vue but didn't know much about it. Besides, my backend friend usually uses CodeIgniter 4, so I
 					ignored it. I found a tutorial on VueJS &amp; CodeIgniter 4, which is a perfect fit.</p>
@@ -52,10 +51,9 @@
 				<p>This website used the following tech stack:</p>
 				<ul>
 					<li>Frontend: <a href="https://vuejs.org/" target="_blank">Vue Ecosystem</a>, <a href="https://tailwindcss.com/">Tailwindcss</a></li>
-					<li>Backend: CodeIgniter 4, MySQL</li>
 					<li>API Architecture: REST</li>
-					<li>Payment Gateway: Midtrans, Xendit</li>
-					<li>Third-party: Google Maps JavaScript, Places, Geocoding &amp; Distance Matrix API</li>
+					<li>Payment Gateway</li>
+					<li>Some Google Maps API</li>
 				</ul>
 				<p>Tailwindcss can helped us to do styling faster, highly customizable and it's also suitable with Vue.</p>
 			</article>
@@ -75,11 +73,6 @@
 					<img class="_contain" loading="lazy" width="300" height="400" src="images/dcika/d-checkout.png"
 						alt="Screenshot 4">
 					<figcaption>Checkout Page</figcaption>
-				</figure>
-				<figure class="_mb-4">
-					<img class="_contain" loading="lazy" width="300" height="400" src="images/dcika/d-admin-cms-form.png"
-						alt="Screenshot 4">
-					<figcaption>Admin CMS</figcaption>
 				</figure>
 			</article>
 			<article>
