--- a/showcase/tozai-line-train-route-map/index.html
+++ b/showcase/tozai-line-train-route-map/index.html
@@ -28,6 +28,7 @@
       </section>
       <section class="section-routes">
         <article class="main-line">
+          <div class="tip"></div>
           <p class="caption">min</p>
           <div class="numbered-boxes">
             <span class="stop-point -box -rich">
@@ -38,12 +39,12 @@
                   <p class="routetext">JR Line</p>
                 </div>
               </div>
-              <strong>18</strong>
+              <strong class="number">18</strong>
               <p class="bottomsub">T-01</p>
               <p class="bottomtitle">Nakano</p>
             </span>
             <span class="stop-point -box">
-              <strong>15</strong>
+              <strong class="number">15</strong>
               <p class="bottomsub">T-02</p>
               <p class="bottomtitle">Ochiai</p>
             </span>
@@ -63,17 +64,17 @@
                   <p class="routetext _text-right">JR Yamanote<br />Line</p>
                 </div>
               </div>
-              <strong>12</strong>
+              <strong class="number">12</strong>
               <p class="bottomsub">T-03</p>
               <p class="bottomtitle _text-right">Takada-<br />nobaba</p>
             </span>
             <span class="stop-point -box">
-              <strong>9</strong>
+              <strong class="number">9</strong>
               <p class="bottomsub">T-04</p>
               <p class="bottomtitle">Waseda</p>
             </span>
             <span class="stop-point -box">
-              <strong>6</strong>
+              <strong class="number">6</strong>
               <p class="bottomsub">T-05</p>
               <p class="bottomtitle _text-right">Kagura-<br />zaka</p>
             </span>
@@ -96,7 +97,7 @@
                   <p class="routetext">Yurakucho Line</p>
                 </div>
               </div>
-              <strong>4</strong>
+              <strong class="number">4</strong>
               <p class="bottomsub">T-06</p>
               <p class="bottomtitle">lidabashi</p>
             </span>
@@ -111,7 +112,7 @@
                   <p class="routetext">Hanzomon Line</p>
                 </div>
               </div>
-              <strong>2</strong>
+              <strong class="number">2</strong>
               <p class="bottomsub">T-07</p>
               <p class="bottomtitle">Kudanshita</p>
             </span>
@@ -126,7 +127,7 @@
           </div>
         </article>
       </section>
-      <footer>
+      <footer class="footer">
         <p class="text-md">Estimated time required.</p>
       </footer>
     </main>
