--- a/showcase/tozai-line-train-route-map/index.html
+++ b/showcase/tozai-line-train-route-map/index.html
@@ -131,5 +131,8 @@
         <p class="text-md">Estimated time required.</p>
       </footer>
     </main>
+    <div class="full-overlay">
+      <p class="textinfo">Please use laptop or computer to view. Thank you.</p>
+    </div>
   </body>
 </html>
